# Projekt2_Zaczek_Duda

./: CMakeLists.txt  main.cpp  test_main.cpp
